Correcciones y anotaciones